# osman

./: justfile  pyproject.toml
.github/workflows/: tests.yaml
src/osman/: apt.py  arch_linux.py  aur_manager.py  debian.py  directory_maker.py  installer.py  pacman.py  pip.py  present_working_directory.py  projects_directory_maker.py  ranger_plugin_installer.py  symbolic_link.py  symbolic_linker.py  ubuntu.py  vim_plugin_installer.py  zsh_installer.py
