[tool.poetry]
name = "osman"
version = "0.1.0"
description = ""
authors = ["Lukas Turcani <lukasturcani93@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
