[project]
name = "osman"
description = "An OS manager."
authors = [
  {name = "Lukas Turcani", email = "lukasturcani@mailbox.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
  "isort",
  "black",
  "flake8",
  "mypy",
]

[tool.setuptools_scm]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"
